{
  "version": 4,
  "terraform_version": "1.11.2",
  "serial": 16,
  "lineage": "c59f2e60-5a06-c28e-4a27-eee7f67eca8d",
  "resources": [
    {
      "mode": "data",
      "type": "aws_security_group",
      "name": "db_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:203918842945:security-group/sg-08c01f95f3ca726af",
            "description": "Managed by Terraform",
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "vitality-dev-app-postgres"
                ]
              }
            ],
            "id": "sg-08c01f95f3ca726af",
            "name": "vitality-dev-app-postgres--oVBX-20250321082048899600000009",
            "tags": {
              "Attributes": "postgres",
              "Name": "vitality-dev-app-postgres",
              "Namespace": "vitality",
              "Stage": "dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-00f11cdb8b2f969b2"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "private_subnet_details",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "subnet-03911beb676de0a58",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:203918842945:subnet/subnet-03911beb676de0a58",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az2",
            "available_ip_address_count": 251,
            "cidr_block": "10.0.17.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03911beb676de0a58",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "203918842945",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Attributes": "private-only-private",
              "Name": "vitality-dev-app-private-only-private-use1d",
              "Namespace": "vitality",
              "Stage": "dev"
            },
            "vpc_id": "vpc-00f11cdb8b2f969b2"
          }
        },
        {
          "index_key": "subnet-071e4069778af6cfc",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:203918842945:subnet/subnet-071e4069778af6cfc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "available_ip_address_count": 251,
            "cidr_block": "10.0.16.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-071e4069778af6cfc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "203918842945",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Attributes": "private-only-private",
              "Name": "vitality-dev-app-private-only-private-use1c",
              "Namespace": "vitality",
              "Stage": "dev"
            },
            "vpc_id": "vpc-00f11cdb8b2f969b2"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "primary",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:203918842945:vpc/vpc-00f11cdb8b2f969b2",
            "cidr_block": "10.0.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0fecbef6883da3da0",
                "cidr_block": "10.0.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-0675ed68aee56a836",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "vitality-dev-app-vpc"
                ]
              }
            ],
            "id": "vpc-00f11cdb8b2f969b2",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-046e4b255b45e235f",
            "owner_id": "203918842945",
            "tags": {
              "Attributes": "vpc",
              "Name": "vitality-dev-app-vpc",
              "Namespace": "vitality",
              "Stage": "dev"
            }
          }
        }
      ]
    },
    {
      "module": "module.rds_cluster_aurora_postgres",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:203918842945:security-group/sg-086d3918bffc4ff60",
            "description": "Allow inbound traffic from Security Groups and CIDRs",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "Allow outbound ipv6 traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-086d3918bffc4ff60",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow inbound traffic from existing security groups",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-08c01f95f3ca726af"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "vitality-dev-postgres",
            "name_prefix": "",
            "owner_id": "203918842945",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "vitality-dev-postgres",
              "Namespace": "vitality",
              "Stage": "dev"
            },
            "tags_all": {
              "Name": "vitality-dev-postgres",
              "Namespace": "vitality",
              "Stage": "dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-00f11cdb8b2f969b2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.primary"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.rds_cluster_aurora_postgres",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow outbound traffic",
            "from_port": 0,
            "id": "sgrule-4413010",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-086d3918bffc4ff60",
            "security_group_rule_id": "sgr-0863d12ba28c4edbc",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.primary",
            "module.rds_cluster_aurora_postgres.aws_security_group.default"
          ]
        }
      ]
    },
    {
      "module": "module.rds_cluster_aurora_postgres",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_ipv6",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow outbound ipv6 traffic",
            "from_port": 0,
            "id": "sgrule-2356864958",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-086d3918bffc4ff60",
            "security_group_rule_id": "sgr-0322a6bf603bf0eb7",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.primary",
            "module.rds_cluster_aurora_postgres.aws_security_group.default"
          ]
        }
      ]
    },
    {
      "module": "module.rds_cluster_aurora_postgres",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.rds_cluster_aurora_postgres",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_ipv6_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.rds_cluster_aurora_postgres",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_security_groups",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow inbound traffic from existing security groups",
            "from_port": 5432,
            "id": "sgrule-2290948228",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-086d3918bffc4ff60",
            "security_group_rule_id": "sgr-0a32889a8bfa18691",
            "self": false,
            "source_security_group_id": "sg-08c01f95f3ca726af",
            "timeouts": null,
            "to_port": 5432,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_security_group.db_sg",
            "data.aws_vpc.primary",
            "module.rds_cluster_aurora_postgres.aws_security_group.default"
          ]
        }
      ]
    },
    {
      "module": "module.rds_cluster_aurora_postgres",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "traffic_inside_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    }
  ]
}